Section 3 text clean up

--- a/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
+++ b/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOKRtTrqIgzNcyFr0IAoIPK",
+      "authorship_tag": "ABX9TyOBrrC2ph3TgG5jhI3dHOd4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5023,10 +5023,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This section compares two unsupervised clustering models on TF-IDF vectors of product titles: K-Means and Agglomerative (Hierarchical) Clustering, followed by low-dimensional visualisation using truncated SVD (PCA for sparse text). The choices reflect best practice for short-text clustering: scalable, distance-based methods on sparse, high-dimensional features.\n",
+        "This section compares two baseline clustering algorithms, K-Means and Agglomerative Clustering applied to TF-IDF vectors. These algorithms were selected because they reflect standard approaches for short-text clustering, cover different modelling assumptions.\n",
         "\n",
-        "Why these models (and not others).\n",
-        "The K-Means + Hierarchical pair gives a strong, complementary baseline: scalable hard partitions vs. structure-revealing merges."
+        "K-Means serves as the primary baseline due to its scalability and effectiveness for high-dimensional vector spaces. It partitions data into k groups by minimising within-cluster variance, using iterative refinement of centroids. With TF-IDF vectors, the default L2 normalisation ensures that Euclidean distance behaves similarly to cosine distance, which is more suitable for text. K-Means is therefore a strong and interpretable method for identifying compact clusters based on frequent lexical patterns. It also allows inspection of top TF-IDF terms per cluster, providing insight into the words that drive each grouping.\n",
+        "\n",
+        "Agglomerative clustering forms a complementary baseline. Instead of optimising centroids, it builds clusters by repeatedly merging the closest pairs of samples or groups. This creates a hierarchical tree structure that reveals how clusters form at different granularities, which is useful for understanding relationships between product titles. The average linkage criterion was chosen because it represents the mean distance between clusters and often produces balanced merges for sparse data. A subset of the data is used due to the quadratic complexity of hierarchical clustering.\n",
+        "\n",
+        "These baselines represent two distinct approaches: K-Means focuses on partitioning and scalability, while Agglomerative Clustering emphasises structure and interpretability. By comparing both, this study establishes a robust foundation for evaluating the more advanced SBERT-based approach introduced in Section 6. Together, these models offer meaningful contrast in behaviour, performance, and cluster quality when applied to real-world product titles."
       ],
       "metadata": {
         "id": "MLGcrVGi2ma8"
@@ -5035,18 +5038,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Task 3.1: K-Means clustering on TF-IDF vectors\n",
-        "###-------------------------------------------------------------\n",
-        "\n",
-        "K-Means partitions the data into\n",
-        "k clusters by iteratively assigning each point to the nearest centroid and recomputing centroids until convergence. With TF-IDF, the default L2 normalisation makes Euclidean distance closely track cosine distance, which is desirable for text similarity.\n",
-        "\n",
-        "K-Means is efficient (linear in samples x features x iterations), deterministic when n_init is fixed, and scales to tens of thousands of titles. Key choices include:\n",
-        "* the number of clusters k (we will tune/justify in the evaluation section using internal indices such as silhouette and Davies-Bouldin);\n",
-        "* A sensible initialisation (k-means++) to reduce poor local minima;\n",
-        "* Enough restarts (n_init) for stability.\n",
-        "\n",
-        "K-Means provides compact, spherical clusters and a simple way to inspect cluster keywords by looking at high-weight TF-IDF terms per cluster centroid."
+        "## Task 3.1: K-Means clustering on TF-IDF vectors"
       ],
       "metadata": {
         "id": "VUPpDJpRcEMr"
@@ -5100,21 +5092,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Task 3.2: Agglomerative (Hierarchical) clustering (on a sample)\n",
-        "#\n",
-        "For large datasets, hierarchical clustering is run on a sample to avoid O(n^2) memory/time in distance computations.\n",
-        "\n",
-        "### Reflection on Agglomerative Clustering\n",
-        "Initially, the model was implemented using the **cosine metric**; however, this caused\n",
-        "errors due to zero vectors in the sparse TF-IDF matrix (some product titles contained\n",
-        "only stopwords after preprocessing).  \n",
-        "To resolve this, the data was **L2-normalised** so that Euclidean distance produces\n",
-        "the same ordering as cosine similarity.\n",
-        "The **Euclidean metric** was therefore used on the normalised data, which follows\n",
-        "standard best practice for text clustering and ensures stable results without\n",
-        "altering the algorithm’s behaviour.\n",
-        "\n",
-        "\n"
+        "## Task 3.2: Agglomerative (Hierarchical) clustering (on a sample)"
       ],
       "metadata": {
         "id": "3Tjgh0753Jm_"
@@ -5174,12 +5152,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Task 3.3: 2D visualisation with Truncated SVD (sparse PCA)\n",
-        "\n",
-        "Dimensionality reduction for visualisation. TF-IDF is sparse and high-dimensional, so we use Truncated SVD (latent semantic analysis) to project vectors into 2D for plotting cluster structure.\n",
-        "\n",
-        "Truncated SVD works directly on sparse inputs and preserves linear structure that often reveals topical groups. This 2D projection is used only for visual diagnostics; clustering itself is performed in the original TF-IDF space to retain information.\n",
-        "\n"
+        "## Task 3.3: 2D visualisation with Truncated SVD (sparse PCA)"
       ],
       "metadata": {
         "id": "8FQNn__l3I9F"
