Finishing up and I need to Add reference to the AI helping with editing etc. Doing that next

--- a/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
+++ b/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMP8oItyxHvJPuwhAn8I2+w",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNdijmKN3win4nquPYMWT1m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1201,7 +1202,7 @@
         "\n",
         "Using `TfidfVectorizer`, each title is transformed into a sparse vector limited to the 5,000 most informative terms. This dimensionality cap improves efficiency while retaining the vocabulary necessary to distinguish similar products. The resulting matrix forms the feature space for clustering, where distance between vectors approximates textual similarity.\n",
         "\n",
-        "In clustering we need numeric features to compare similarity. TF-IDF accomplishes this, converting cleaned text into numeric vectors showing how important each word is across all product titles and I have applied this to the the Clean Title below."
+        "In clustering we need numeric features to compare similarity. TF-IDF accomplishes this, converting cleaned text into numeric vectors showing how important each word is across all product titles and I have applied this to the Clean Title below."
       ],
       "metadata": {
         "id": "GwX-OpiSLe4G"
@@ -1283,10 +1284,10 @@
       "source": [
         "from sklearn.cluster import KMeans\n",
         "\n",
-        "# choose number of clusters (will be tuned/justified in Section 4)\n",
+        "# choose number of clusters (fixed at 25 and discussed in Section 4)\n",
         "k = 25\n",
         "\n",
-        "# k-means with sensible defaults for text\n",
+        "# k-means with defaults for text\n",
         "kmeans = KMeans(\n",
         "    n_clusters=k,\n",
         "    init=\"k-means++\",\n",
@@ -1298,7 +1299,7 @@
         "# fit on TF-IDF matrix (X_tfidf from Section 2)\n",
         "kmeans_labels = kmeans.fit_predict(X_tfidf)\n",
         "\n",
-        "# quick sanity checks\n",
+        "# quick sanity checks and output\n",
         "import numpy as np\n",
         "unique, counts = np.unique(kmeans_labels, return_counts=True)\n",
         "print(\"K-Means clusters and sizes:\", dict(zip(unique, counts)))\n",
@@ -1581,11 +1582,12 @@
         "from sklearn.cluster import KMeans\n",
         "import numpy as np\n",
         "\n",
-        "# Load pretrained SBERT model (MiniLM is lightweight and fast)\n",
+        "# Load pretrained SBERT model (using MiniLM as it is lightweight and fast)\n",
         "model = SentenceTransformer(\"all-MiniLM-L6-v2\")\n",
         "\n",
         "# Generate SBERT embeddings for product titles\n",
         "titles = product_df[\"Clean_Title\"].tolist()\n",
+        "\n",
         "#sbert_embeddings = model.encode(titles, show_progress_bar=True)\n",
         "sbert_embeddings = model.encode(titles, show_progress_bar=False)\n",
         "\n",
@@ -1595,7 +1597,7 @@
         "kmeans_sbert = KMeans(n_clusters=k, random_state=42)\n",
         "sbert_labels = kmeans_sbert.fit_predict(sbert_embeddings)\n",
         "\n",
-        "# Basic checks\n",
+        "# Basic checks/outputs\n",
         "unique, counts = np.unique(sbert_labels, return_counts=True)\n",
         "print(\"SBERT + K-Means clusters and sizes:\", dict(zip(unique, counts)))\n",
         "print(\"Embedding shape:\", sbert_embeddings.shape)\n"
