Added Gen AI comments and which section they were used to help describe each bits.

--- a/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
+++ b/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNdijmKN3win4nquPYMWT1m",
+      "authorship_tag": "ABX9TyNrKMv07zT8HwpuvuO7sID5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,16 +32,22 @@
       "source": [
         "#CEM300-Natural-Language-Processing-Coursework\n",
         "\n",
-        "In this work, I explore the Product Classification and Clustering Dataset.\n",
+        "In this comparative study, I explore the Product Classification and Clustering Dataset.\n",
         "<br>\n",
-        "Sources && Frameworks:\n",
-        "\n",
         "Dataset Chosen - https://archive.ics.uci.edu/dataset/837/product+classification+and+clustering\n",
-        "\n",
         "<br>\n"
       ],
       "metadata": {
         "id": "-bgl68QTD83F"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Generative AI was used to support completion of this assessment. The GenAI tool **ChatGPT** was used for editing wording, structuring explanations, and clarifying how to present my own work. All modelling decisions, code implementations, and analysis were produced by me and generative AI was not used to generate solutions or code. Where generative AI assisted with editing or restructuring text, this is indicated in comments within the relevant markdown sections."
+      ],
+      "metadata": {
+        "id": "-VkgNB7UWhCr"
       }
     },
     {
@@ -1187,6 +1193,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**(Note: Generative AI was used to help edit and clarify the wording in this section. All technical content and code were developed independently.)**\n"
+      ],
+      "metadata": {
+        "id": "B_0vdnhUZYO-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# 2. Section 2: Representation Learning"
       ],
       "metadata": {
@@ -1471,6 +1486,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**(Note: Generative AI was used to help edit and clarify the wording in this section. All technical content and code were developed independently.)**"
+      ],
+      "metadata": {
+        "id": "puinh0G5ZgPY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Section 4: Evaluation"
       ],
       "metadata": {
@@ -1693,6 +1717,15 @@
       ],
       "metadata": {
         "id": "Q0MicSaIyc2-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**(Note: Generative AI was used to help edit and clarify the wording in this section.)**\n"
+      ],
+      "metadata": {
+        "id": "OHYN0KDCZGDI"
       }
     },
     {
