Justification on using the all-MiniLM-L6-v2 model

--- a/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
+++ b/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOgs2uQUrnQ1f3q7h+Ide3U",
+      "authorship_tag": "ABX9TyMhV1tl9UJtunQiYOwJKxAz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5356,7 +5356,8 @@
       "source": [
         "## Section 6.1: Implementation of the Paper's Algorithm (SBERT)\n",
         "* SBERT provides semantic sentence embeddings, allowing clustering based on meaning rather than surface level word overlap.\n",
-        "* This implementation below follows the method described in \"Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks\"."
+        "* This implementation below follows the method described in \"Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks\".\n",
+        "* ALso uses the all-MiniLM-L6-v2 model, which is an officially released SBERT variant listed on the SentenceTransformers model page (https://www.sbert.net/docs/sentence_transformer/pretrained_models.html). Although the original SBERT paper evaluates models such as **bert-base-nli-mean-tokens** and **roberta-base-nli-stsb-mean-tokens**, the MiniLM versions does the same Siamese architecture described in the paper."
       ],
       "metadata": {
         "id": "IltkVX00wx8o"
@@ -5707,11 +5708,11 @@
         "print(similarities)"
       ],
       "metadata": {
-        "id": "Rc8l5hZXhfg_",
-        "outputId": "ce676215-ea39-4bbc-f64b-e79641722e32",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Rc8l5hZXhfg_",
+        "outputId": "ce676215-ea39-4bbc-f64b-e79641722e32"
       },
       "execution_count": 22,
       "outputs": [
@@ -5837,11 +5838,11 @@
         "print(\"Mini STS Pearson correlation:\", round(corr, 3))"
       ],
       "metadata": {
-        "id": "dE6RK2n7VNxF",
-        "outputId": "bbb20dae-43a4-4ff1-e2fd-55a12c482228",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dE6RK2n7VNxF",
+        "outputId": "bbb20dae-43a4-4ff1-e2fd-55a12c482228"
       },
       "execution_count": 20,
       "outputs": [
