--- a/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
+++ b/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMhV1tl9UJtunQiYOwJKxAz",
+      "authorship_tag": "ABX9TyPgtaQ0Q7S0a17x8g9bpO+r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5786,7 +5786,7 @@
       "source": [
         "## Task 6.3: Mini STS-Style Evaluation\n",
         "\n",
-        "Following feedback, a small manually labelled subset of product titles was created to approximate the semantic similarity (STS) evaluation used in the SBERT paper.All titles below are taken directly from the dataset. Five pairs were selected and assigned similarity scores in the range 0-5, where 5 indicates near-identical products and 0 indicates unrelated items. This allows a lightweight comparison between human intuition and SBERT cosine similarity.*italicised text*"
+        "Following feedback, a small manually labelled subset of product titles was created to approximate the semantic similarity (STS) evaluation used in the SBERT paper.All titles below are taken directly from the dataset. Five pairs were selected and assigned similarity scores in the range 0-5, where 5 indicates near-identical products and 0 indicates unrelated items. This allows a lightweight comparison between human intuition and SBERT cosine similarity."
       ],
       "metadata": {
         "id": "OJt6cKpZVQBB"
