more AI used text editing indicated by cells to tell sections they were used in

--- a/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
+++ b/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPgtaQ0Q7S0a17x8g9bpO+r",
+      "authorship_tag": "ABX9TyOrM5RgoFsGuUyt1nezDrem",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5913,6 +5913,15 @@
       ],
       "metadata": {
         "id": "ByseXeWDBYGW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**(Note: Generative AI was used to help edit and clarify the wording in this section.)**"
+      ],
+      "metadata": {
+        "id": "L5p8Wav7lOPw"
       }
     },
     {
