Cleaning up after feedback from week 9 lecture and labs

--- a/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
+++ b/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOrM5RgoFsGuUyt1nezDrem",
+      "authorship_tag": "ABX9TyOsqaa+p0jKeH+rDfkRKwZv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3825,7 +3825,7 @@
         "\n",
         "The aim of the coursework is to explore natural language processing techniques for grouping similar product titles using unsupervised learning. While the dataset includes a Category Label, this study does not use it as a supervised target; instead, the task is treated as a text-based clustering problem where algorithms must identify structure purely from language features. This approach reflects realistic scenarios in product cataloguing, where new items need to be grouped without predefined classes.\n",
         "\n",
-        "Before clustering, the text must be cleaned and transformed. Titles vary widely in format and punctuation, and many contain repeated elements such as brand names or model numbers. To standardise the text, preprocessing steps including lowercasing, punctuation removal, stopword removal, and lemmatisation are applied. These steps reduce noise and prepare the titles for numerical representation in later sections.\n"
+        "Before clustering, the text must be cleaned and transformed. Titles vary widely in format and punctuation, and many contain repeated elements such as brand names or model numbers. To standardise the text, preprocessing steps including lowercasing, punctuation removal, stopword removal, and lemmatisation are applied. These steps reduce noise and prepare the titles for numerical representation in later sections."
       ],
       "metadata": {
         "id": "5iiLHysUH-ZS"
@@ -4532,7 +4532,7 @@
         "## Task 1.3: Exploring and Preparing Text Data\n",
         "\n",
         "This task focuses on understanding\n",
-        "the textual content of the dataset before vectorisation. Because clustering relies purely on text similarity, it is important to inspect the product titles, decide how aggressively to clean them, and justify the chosen preprocessing strategy.\n"
+        "the textual content of the dataset before vectorisation."
       ],
       "metadata": {
         "id": "b3QddHt3SCvR"
@@ -5357,7 +5357,7 @@
         "## Section 6.1: Implementation of the Paper's Algorithm (SBERT)\n",
         "* SBERT provides semantic sentence embeddings, allowing clustering based on meaning rather than surface level word overlap.\n",
         "* This implementation below follows the method described in \"Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks\".\n",
-        "* ALso uses the all-MiniLM-L6-v2 model, which is an officially released SBERT variant listed on the SentenceTransformers model page (https://www.sbert.net/docs/sentence_transformer/pretrained_models.html). Although the original SBERT paper evaluates models such as **bert-base-nli-mean-tokens** and **roberta-base-nli-stsb-mean-tokens**, the MiniLM versions does the same Siamese architecture described in the paper."
+        "* Also uses the all-MiniLM-L6-v2 model, which is an officially released SBERT variant listed on the SentenceTransformers model page (https://www.sbert.net/docs/sentence_transformer/pretrained_models.html). Although the original SBERT paper evaluates models such as **bert-base-nli-mean-tokens** and **roberta-base-nli-stsb-mean-tokens**, the MiniLM versions does the same Siamese architecture described in the paper."
       ],
       "metadata": {
         "id": "IltkVX00wx8o"
@@ -5378,7 +5378,6 @@
         "# Generate SBERT embeddings for product titles\n",
         "titles = product_df[\"Clean_Title\"].tolist()\n",
         "\n",
-        "#sbert_embeddings = model.encode(titles, show_progress_bar=True)\n",
         "sbert_embeddings = sbert_model.encode(titles, show_progress_bar=False)\n",
         "\n",
         "# Apply K-Means clustering on SBERT embeddings\n",
@@ -5861,7 +5860,13 @@
       "cell_type": "markdown",
       "source": [
         "### Interpretation\n",
-        "The mini STS evaluation gives a Pearson correlation of 0.383, showing a moderate positive trend between my manual similarity labels and SBERT's cosine scores. Although lower than the full STS benchmarks in the paper, it still confirms that SBERT places similar product titles closer together than unrelated ones."
+        "The mini STS evaluation gives a Pearson correlation of 0.383. Although lower than the full STS benchmarks in the paper, this is expected for three main reasons.\n",
+        "\n",
+        "* First, all my similarity pairs come from the same narrow product domain, so SBERT embeddings naturally cluster them closely together, reducing differences in cosine similarity.\n",
+        "\n",
+        "* Second, SBERT was trained for semantic similarity rather than fine-grained product distinctions, so it does not strongly differentiate between similar model names (e.g., iPhone 8 vs iPhone 8 Plus).\n",
+        "\n",
+        "* Third, the paper evaluates on large labelled datasets, whereas my evaluation uses only five manually labelled pairs. Despite the lower score, the positive correlation still confirms that SBERT captures meaningful similarity patterns within product titles.”"
       ],
       "metadata": {
         "id": "BZ9fgyatW-XN"
