Section 1 rewritten to meet the criteria of the coursework

--- a/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
+++ b/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMNCXXcjLXKSt2OMWLgyQaz",
+      "authorship_tag": "ABX9TyPZUd2AzSyrsLweRfRuqgtW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,11 +55,10 @@
       "source": [
         "# Section 1 - Dataset\n",
         "\n",
-        "This coursework uses the *Product Classification and Clustering Dataset* from the UCI Machine Learning Repository. The dataset contains 35,312 product entries gathered from multiple online retailers, with fields such as Product ID, Product Title, Merchant ID, Cluster ID, Cluster Label, Category ID, and Category Label. Although these fields provide useful context, the focus of this study is the unstructured text contained in the Product Title column.\n",
+        "This coursework uses the Product Classification and Clustering Dataset from the UCI Machine Learning Repository, containing 35,312 product entries collected from multiple online retailers. The dataset includes fields such as Product ID, Product Title, Merchant ID, Cluster ID, and Category Label, but the focus of this study is the Product Title, which provides the unstructured text required for clustering.\n",
+        "The task is approached as an unsupervised NLP problem, grouping products based solely on their textual descriptions rather than relying on the existing Category Labels. This reflects real scenarios where incoming product data is unlabelled or inconsistently categorised, meaning structure must be discovered directly from the text.\n",
         "\n",
-        "The aim of the coursework is to explore natural language processing techniques for grouping similar product titles using unsupervised learning. While the dataset includes a Category Label, this study does not use it as a supervised target; instead, the task is treated as a text-based clustering problem where algorithms must identify structure purely from language features. This approach reflects realistic scenarios in product cataloguing, where new items need to be grouped without predefined classes.\n",
-        "\n",
-        "Before clustering, the text must be cleaned and transformed. Titles vary widely in format and punctuation, and many contain repeated elements such as brand names or model numbers. To standardise the text, preprocessing steps including lowercasing, punctuation removal, stopword removal, and lemmatisation are applied. These steps reduce noise and prepare the titles for numerical representation in later sections."
+        "The product titles are typically short and noisy, often containing brand names, colours, sizes, and model numbers in inconsistent formats. To make the text suitable for numerical representation, standard NLP preprocessing is applied. This includes lowercasing, removing punctuation, removing stopwords, and lemmatising tokens. The resulting cleaned text provides a consistent basis for later vectorisation using TF-IDF."
       ],
       "metadata": {
         "id": "5iiLHysUH-ZS"
@@ -1300,11 +1299,11 @@
         "product_df[\"Category_Label\"].nunique()"
       ],
       "metadata": {
-        "id": "pVBjabAV8EuK",
-        "outputId": "f1f3e5fc-83bf-4db9-e0f9-c123fcfcdfa6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pVBjabAV8EuK",
+        "outputId": "f1f3e5fc-83bf-4db9-e0f9-c123fcfcdfa6"
       },
       "execution_count": 8,
       "outputs": [
