Section 2 re-written to meet coursework Spec

--- a/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
+++ b/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPZUd2AzSyrsLweRfRuqgtW",
+      "authorship_tag": "ABX9TyP3czKdumFk5iXOt2f+oAG3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1200,25 +1200,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 2. Section 2: Representation Learning"
+        "# 2. Section 2: Representation Learning\n",
+        "\n",
+        "## Overview\n",
+        "\n",
+        "To cluster the product titles, the cleaned text must be converted into numerical vectors. This work uses Term Frequency-Inverse Document Frequency (TF-IDF), a representation method in NLP for weighting terms based on how frequently they appear within a document compared to the entire dataset. TF-IDF is particularly effective for short product titles because distinctive tokens such as brand names, colours, and model numbers receive higher weight, helping differentiate similar items.\n",
+        "\n",
+        "The **TfidfVectorizer** transforms each title into a sparse vector, limited to the 5,000 most informative terms for efficiency. This maintains important vocabulary while reducing computation time, which is important for clustering methods. The resulting TF-IDF matrix provides a high-dimensional feature space in which similarity between titles can be measured.\n",
+        "\n",
+        "Clustering algorithms require numerical input, TF-IDF supplies a structured representation of the text by capturing how informative each term is across the dataset. This representation aligns with standard practice in text mining and prepares the data for use with K-Means and Agglomerative Clustering in later sections below."
       ],
       "metadata": {
         "id": "z4qi4uOzITkX"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Overview\n",
-        "\n",
-        "To apply clustering algorithms, the cleaned product titles must be converted into numerical vectors. This study uses Term Frequency-Inverse Document Frequency (TF-IDF), a widely used method for measuring how important a word is within a document relative to the entire collection. TF-IDF is particularly effective for short text such as product titles, where distinctive terms (e.g., model numbers or brand identifiers) carry strong discriminative value.\n",
-        "\n",
-        "Using `TfidfVectorizer`, each title is transformed into a sparse vector limited to the 5,000 most informative terms. This dimensionality cap improves efficiency while retaining the vocabulary necessary to distinguish similar products. The resulting matrix forms the feature space for clustering, where distance between vectors approximates textual similarity.\n",
-        "\n",
-        "In clustering we need numeric features to compare similarity. TF-IDF accomplishes this, converting cleaned text into numeric vectors showing how important each word is across all product titles and I have applied this to the Clean Title below."
-      ],
-      "metadata": {
-        "id": "GwX-OpiSLe4G"
       }
     },
     {
@@ -1262,15 +1255,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 3. Section 3: Algorithms"
-      ],
-      "metadata": {
-        "id": "p2f6vXGRZh3s"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
+        "# 3. Section 3: Algorithms\n",
+        "\n",
         "This section compares two baseline clustering algorithms, K-Means and Agglomerative Clustering applied to TF-IDF vectors. These algorithms were selected because they reflect standard approaches for short-text clustering, cover different modelling assumptions.\n",
         "\n",
         "K-Means serves as the primary baseline due to its scalability and effectiveness for high-dimensional vector spaces. It partitions data into k groups by minimising within-cluster variance, using iterative refinement of centroids. With TF-IDF vectors, the default L2 normalisation ensures that Euclidean distance behaves similarly to cosine distance, which is more suitable for text. K-Means is therefore a strong and interpretable method for identifying compact clusters based on frequent lexical patterns. It also allows inspection of top TF-IDF terms per cluster, providing insight into the words that drive each grouping.\n",
@@ -1280,7 +1266,7 @@
         "These baselines represent two distinct approaches: K-Means focuses on partitioning and scalability, while Agglomerative Clustering emphasises structure and interpretability. By comparing both, this study establishes a robust foundation for evaluating the more advanced SBERT-based approach introduced in Section 6. Together, these models offer meaningful contrast in behaviour, performance, and cluster quality when applied to real-world product titles."
       ],
       "metadata": {
-        "id": "MLGcrVGi2ma8"
+        "id": "p2f6vXGRZh3s"
       }
     },
     {
